--- a/anomaly_detection_config.json
+++ b/anomaly_detection_config.json
@@ -1,5 +1,5 @@
 {
-    "training_timestamp_utc": "2025-05-28T14:36:08.733770+00:00",
-    "mljar_results_path": "/app/mljar_results",
+    "training_timestamp_utc": "2025-05-28T23:01:18.799961+00:00",
+    "mljar_results_path": "/home/vivien/wasp-ids/mljar_results",
     "feature_importance_status": "Feature importances not directly extracted. Check MLJAR reports in 'mljar_results'."
 }
